# FastAPI_Layers

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  app_factory.py  main.py  runtime.py  runtime_access.py  worker.py  workers.py
app/api/: __init__.py  openapi.py  router.py
app/core/: __init__.py  config.py  context.py  errors.py  logging.py  metrics.py  middleware.py  observability.py  security.py
app/db/: __init__.py  base.py  models.py  repositories.py  session.py
app/domain/: __init__.py  enums.py  events.py  schemas.py
app/messaging/: kafka.py  topics.py
app/modules/alerting/: __init__.py  api.py  queries.py  service.py
app/modules/audit/: __init__.py  api.py  queries.py  service.py
app/modules/monitoring/: __init__.py  anomaly.py  api.py  drift.py  health.py  queries.py  schemas.py
app/modules/orchestration/: __init__.py  api.py  gateway.py  graph.py  queries.py  schemas.py  service.py
app/modules/registry/: __init__.py  api.py  commands.py  queries.py  schemas.py
app/projections/: __init__.py  projector.py
app/services/: __init__.py  alerting_api.py  audit_api.py  monitoring_api.py  orchestration_api.py  orchestration_query_api.py  registry_api.py
deploy/kubernetes/: external-secret.example.yaml  ingress.example.yaml  keda-trigger-auth.example.yaml  namespace.yaml  networkpolicy.example.yaml
docker/: Dockerfile  otel-collector-config.yaml  prometheus.yml  start-api.sh  start-worker.sh
docs/: api.md  index.md
docs/architecture/: event-flow.md  kafka.md  overview.md  patterns.md
docs/business/: adoption-roadmap.md  personas.md  roi-and-tradeoffs.md  use-cases.md
docs/development/: change-playbook.md  guide.md  langgraph.md  modules.md
docs/operations/: deployment-guide.md  helm-kubernetes.md  monitoring-guide.md  production-hardening.md  runbook.md
examples/: workflow_execution.json  workflow_execution_with_validator.json
helm/workflow-platform/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/workflow-platform/templates/: _helpers.tpl  configmap.yaml  hpa-workers.yaml  (+11 more)
scripts/: bootstrap_local.py  create_topics.py  dev_stack.py  kafka_debug.py  seed_demo_data.py  smoke-test.ps1  start-local.ps1  start-local.sh  stop-local.ps1  stop-local.sh
tests/: conftest.py
tests/integration/: test_alerting_flow.py  test_api_flow.py  test_kafka_flow.py
tests/unit/: test_anomaly_detection.py  test_drift_detection.py  test_execution_workflow.py  test_health_service.py  test_registry_commands.py  test_runtime_split.py  test_security.py
