[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-platform"
version = "0.1.0"
description = "Production-ready centralized workflow operations platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Platform Team" }
]
dependencies = [
  "aiokafka>=0.11.0",
  "alembic>=1.15.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "greenlet>=3.1.1",
  "httpx>=0.28.1",
  "langgraph>=0.3.0",
  "orjson>=3.10.16",
  "prometheus-client>=0.21.1",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.1",
  "PyJWT>=2.10.1",
  "python-json-logger>=3.2.1",
  "redis>=5.2.1",
  "sqlalchemy[asyncio]>=2.0.38",
  "structlog>=25.2.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.34.0",
  "opentelemetry-api>=1.31.1",
  "opentelemetry-sdk>=1.31.1",
  "opentelemetry-exporter-otlp>=1.31.1",
  "opentelemetry-instrumentation-fastapi>=0.52b1",
  "opentelemetry-instrumentation-sqlalchemy>=0.52b1",
  "black>=26.3.1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0",
  "black>=25.1.0",
  "mypy>=1.15.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.8",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.0.0",
  "respx>=0.22.0",
  "ruff>=0.11.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: tests that exercise app integration behavior",
  "kafka: tests that validate producer and consumer flow"
]

[tool.mypy]
python_version = "3.13"
plugins = []
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true
pretty = true
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
